feat: add 1kg citation

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -62,3 +62,14 @@
   pages = {867-868},
   doi = {10.1093/bioinformatics/btx699}
 }
+
+@article{1000GenomesConsortium2015,
+  author = {{The 1000 Genomes Project Consortium}},
+  title = {A global reference for human genetic variation},
+  journal = {Nature},
+  year = {2015},
+  volume = {526},
+  number = {7571},
+  pages = {68-74},
+  doi = {10.1038/nature15393}
+}
