fix: add more benchmarking info

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -63,3 +63,11 @@
   pages = {68-74},
   doi = {10.1038/nature15393}
 }
+
+@software{Peter2023,
+  author = {Peter, David},
+  title = {hyperfine: A command-line benchmarking tool},
+  year = {2023},
+  version = {1.16.1},
+  url = {https://github.com/sharkdp/hyperfine}
+}
